feat : 소현님 파트 (GET) 러프하게 완성